Add Multiple output bindings, native support and changes to azure functions learn page